--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
 	<meta charset="utf-8">
 	<title>\o/</title>
+	<link rel="stylesheet" href="css/style.css" >
 </head>
 <body>
 	<header></header>
-	<section></section>
-	<section></section>
+	<section><p id="bleu">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nec neque fermentum ligula ultrices pharetra. Nunc urna massa, suscipit efficitur nulla at, volutpat lacinia lorem. Quisque quis tristique ex. Suspendisse maximus elit lacus, volutpat ultricies enim auctor at. Vivamus sit amet nisi gravida, consectetur nunc sit amet, vestibulum sem. Phasellus a arcu at ligula sagittis efficitur. Nam in eros placerat, hendrerit ipsum a, ultrices libero.</p></section>
+	<section><p>Aenean porttitor lectus erat, et interdum est venenatis nec. Nullam eleifend turpis vel felis venenatis, vitae efficitur mi consectetur. Duis efficitur purus ac nibh aliquet porta ut non neque. Curabitur finibus nisi dignissim magna lobortis, quis auctor purus ullamcorper. Curabitur dignissim mollis dui, quis tincidunt augue malesuada a. Interdum et malesuada fames ac ante ipsum primis in faucibus. Maecenas eget tellus non purus scelerisque commodo. Nam quam nunc, euismod quis ipsum vel, efficitur consectetur velit.</p></section>
+	<section><p id="rouge">Etiam vel sodales leo, ut condimentum metus. Vivamus facilisis consequat justo fermentum viverra. Quisque sit amet nisi in magna euismod ornare. Morbi suscipit et orci at mattis. Nulla malesuada est a accumsan dictum. Praesent laoreet vulputate velit at pulvinar. Sed sed nibh tempor velit laoreet auctor. Ut at finibus nisl. Donec ultrices, urna vel venenatis egestas, ex lectus maximus leo, in volutpat libero lectus hendrerit eros.</p></section>
+	<img src="img/calais.jpg" alt="Calais"/>
 	<footer></footer>
 </body>
 </html>
