--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport">
 	<title>\o/</title>
 	<link rel="stylesheet" href="css/style.css" >
 </head>
