--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport">
 	<title>\o/</title>
 	<link rel="stylesheet" href="css/style.css" >
-	<link rel="icon" href="img/pepe.png" />
+	<link rel="icon" type="image/png" href="img/pepe.png" />
 </head>
 <body>
 	<header></header>
