--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
 	<section><p>Aenean porttitor lectus erat, et interdum est venenatis nec. Nullam eleifend turpis vel felis venenatis, vitae efficitur mi consectetur. Duis efficitur purus ac nibh aliquet porta ut non neque. Curabitur finibus nisi dignissim magna lobortis, quis auctor purus ullamcorper. Curabitur dignissim mollis dui, quis tincidunt augue malesuada a. Interdum et malesuada fames ac ante ipsum primis in faucibus. Maecenas eget tellus non purus scelerisque commodo. Nam quam nunc, euismod quis ipsum vel, efficitur consectetur velit.</p></section>
 	<section><p id="rouge">Etiam vel sodales leo, ut condimentum metus. Vivamus facilisis consequat justo fermentum viverra. Quisque sit amet nisi in magna euismod ornare. Morbi suscipit et orci at mattis. Nulla malesuada est a accumsan dictum. Praesent laoreet vulputate velit at pulvinar. Sed sed nibh tempor velit laoreet auctor. Ut at finibus nisl. Donec ultrices, urna vel venenatis egestas, ex lectus maximus leo, in volutpat libero lectus hendrerit eros.</p></section>
 	<img src="img/calais.jpg" alt="Calais"/>
+	<input type="text" name="nom" placeholder="Nom"/>
+	<input type="date" name="date" placeholder="26/01/2018"/>
+	<input type="number" name="age" placeholder="Age"/>
+	<input type="url" name="facebook" placeholder="www.exemple.com"/>
+	<input type="email" name="mail" placeholder="exemple@exemple.fr"/>
+	<input type="tel" name="num" placeholder="0600000000"/>
 	<footer></footer>
 </body>
 </html>
