--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport">
+	<meta name="viewport" content="width: device-width", initial-scale=1.0>
 	<title>\o/</title>
 	<link rel="stylesheet" href="css/style.css" >
 	<link rel="icon" type="image/png" href="img/pepe.png" />
@@ -14,7 +14,7 @@
 	<section><p id="rouge">Etiam vel sodales leo, ut condimentum metus. Vivamus facilisis consequat justo fermentum viverra. Quisque sit amet nisi in magna euismod ornare. Morbi suscipit et orci at mattis. Nulla malesuada est a accumsan dictum. Praesent laoreet vulputate velit at pulvinar. Sed sed nibh tempor velit laoreet auctor. Ut at finibus nisl. Donec ultrices, urna vel venenatis egestas, ex lectus maximus leo, in volutpat libero lectus hendrerit eros.</p></section>
 	<section><img src="img/calais.jpg" alt="Calais"/></section>
 	<input type="text" name="nom" placeholder="Nom"/>
-	<input type="date" name="date" placeholder="26/01/2018"/>
+	<input type="date" name="date"/>
 	<input type="number" name="age" placeholder="Age"/>
 	<input type="url" name="facebook" placeholder="www.exemple.com"/>
 	<input type="email" name="mail" placeholder="exemple@exemple.fr"/>
