--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width: device-width", initial-scale=1.0>
+	<meta name="viewport" content="width: device-width" initial-scale=1.0>
 	<title>\o/</title>
 	<link rel="stylesheet" href="css/style.css" >
 	<link rel="icon" type="image/png" href="img/pepe.png" />
